assets/less/views/settings.less
.settingsView-section {
	width: 98%;

	margin: 0 1% 16px 1%; // this should give us 10px of margin-bottom in total

	&:extend(.clear-fix);
}
.settingsView-setting {
	width: 100%;

	margin: 5px 0;

	display: block;

	.clear-fix;
}
.settingsView-setting-header {
	margin: 0.75em 0;
}
.settingsView-setting-row {
	width: 98%;
	margin: 0 1%;
}
.settingsView-selectLabel {
	width: 50%;

	margin: 5px 0;

	@media @mobile {
		width: 100%;
	}
}
.settingsView-yourFingerprint {
	@media @desktop {
		width: 29.9em;
		max-width: 100%;
	}
	@media @mobile {
		width: 100%;
	}
}
.settingsView-qrCode {
	margin-top: 10px;
	max-width: 100%;
}
#settingsView-firstNameInput,
#settingsView-lastNameInput,
#settingsView-saveName,
#settingsView-passwordInput,
#settingsView-passwordInput2,
#settingsView-savePassword {
	@media @desktop {
		float: left;
		width: 180px;
		margin: 0 2px;
	}
	@media @mobile {
		width: 100%;
		margin-bottom: 5px;
	}
}
#settingsView-nickNameInput,
#settingsView-saveNickName,
#settingsView-mailInput,
#settingsView-saveMail {
	@media @desktop {
		float: left;
		width: 180px;
		margin: 0 2px;
	}
	@media @mobile {
		width: 100%;
		margin-bottom: 5px;
	}
}
#settingsView-nickNameInput,
#settingsView-mailInput {
	@media @desktop {
		width: 364px;
	}
}
.settingsView-toggleEncryption {
	@media @desktop { float: left; }
}
.settingsView-whoMaySeeIt {
	@media @desktop {
		float: left;
		width: ~"calc(98% - 52px)";
		margin-left: 2%;
	}
}
#settingsView-safety {
	margin: 5px 0;
}
.settingsView-toggleEncryption,
.settingsView-whoMaySeeIt {
	@media @mobile { width: 100%; margin: 5px 0; }
}
.settingsView-settingsFormButton {
	@media @mobile {
		width: 100%;
		margin: 5px 0;
	}
	@media @desktop {
		width: 180px;
		margin: 5px 2px;
	}
}
#settingsView-safety .settingsView-settingsFormButton {
	margin: 5px 1%;
	@media @mobile {
		width: 98%;
	}
}

